# oop2023

./: README.md  multi_task.txt
lab1/: handlers.cpp  handlers.h  main.cpp  matrix.cpp  matrix.h
lab2/: CMakeLists.txt  TODO
lab2/Handlers/include/Handlers/: Handlers.h
lab2/Handlers/source/: Handlers.cpp
lab2/Resource/include/Resource/: Resource.h
lab2/Table/include/Table/: Table.h
lab2/Table/source/: Table.cpp
lab2/Tests/source/: TestCase.cpp
lab2/dynamic/: CMakeLists.txt  HOW_COVERAGE_PATH  TODO  main_t.cpp
lab2/dynamic/HandlersDynamic/: CMakeLists.txt
lab2/dynamic/HandlersDynamic/include/HandlersDynamic/: Handlers.h
lab2/dynamic/HandlersDynamic/source/: Handlers.cpp
lab2/dynamic/RDialogueDynamic/: CMakeLists.txt
lab2/dynamic/RDialogueDynamic/include/RDialogue/: RDialogue.h
lab2/dynamic/RDialogueDynamic/source/: RDialogue.cpp
lab2/dynamic/ResourceDynamic/: CMakeLists.txt
lab2/dynamic/ResourceDynamic/include/ResourceDynamic/: Resource.h
lab2/dynamic/ResourceDynamic/source/: Resource.cpp
lab2/dynamic/TDialogueDynamic/: CMakeLists.txt
lab2/dynamic/TDialogueDynamic/include/TDialogueDynamic/: TDialogue.h
lab2/dynamic/TDialogueDynamic/source/: TDialogue.cpp
lab2/dynamic/TableDynamic/: CMakeLists.txt
lab2/dynamic/TableDynamic/include/TableDynamic/: Table.h
lab2/dynamic/TableDynamic/source/: Table.cpp
lab2/dynamic/TestsDynamic/source/: TestCase.cpp
lab2/static/: CMakeLists.txt  TODO  main.cpp  main_t.cpp
lab2/static/Handlers/: CMakeLists.txt
lab2/static/Handlers/include/Handlers/: Handlers.h
lab2/static/Handlers/source/: Handlers.cpp
lab2/static/RDialogue/: CMakeLists.txt
lab2/static/RDialogue/include/RDialogue/: RDialogue.h
lab2/static/RDialogue/source/: RDialogue.cpp
lab2/static/Resource/: CMakeLists.txt
lab2/static/Resource/include/Resource/: Resource.h
lab2/static/Resource/source/: Resource.cpp
lab2/static/TDialogue/: CMakeLists.txt
lab2/static/TDialogue/include/: TDialogue.h
lab2/static/TDialogue/include/TDialogue/: TDialogue.h
lab2/static/TDialogue/source/: TDialogue.cpp
lab2/static/Table/: CMakeLists.txt
lab2/static/Table/include/Table/: Table.h
lab2/static/Table/source/: Table.cpp
lab2/static/Tests/source/: TestCase.cpp
lab3/: CMakeLists.txt  Entity.hpp  Game.hpp  Graphics.hpp  SchoolAspects.hpp  lab03_UML.drawio  main.cpp  newmain
lab3/Assets/Textures/: Constants.hpp  Shorts.hpp
lab3/Entity/: CMakeLists.txt
lab3/Entity/include/: Entity.hpp
lab3/Entity/sources/: Entity.cpp
lab3/Game/: CMakeLists.txt
lab3/Game/include/: Game.hpp
lab3/Game/source/: Game.cpp
lab3/Graphics/: CMakeLists.txt
lab3/Graphics/include/: Graphics.hpp
lab3/Graphics/source/: Graphics.cpp
lab3/School/include/: School.hpp  Skill.hpp
lab3/Services/include/: AIService.hpp  Handlers.hpp
lab3/Services/source/: AIService.cpp  Handlers.cpp
lab3/Skill/include/: Skill.hpp
lab3/Troop/: CMakeLists.txt
lab3/Troop/include/: Troop.hpp
lab3/Troop/source/: Troop.cpp
lab3/Troops/include/: Troop.hpp
